# AutoMind

./: .dockerignore  .gitattributes  .gitignore  AUTOMIND_REFACTOR_PLAN.md  BUGS_21_TO_FIX.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  GITHUB.md  LICENSE  README.en.md  README.md  RELEASE.md  conftest.py  docker-compose.yml  launch.bat  pyproject.toml  使用手册.html  使用手册.md
.claude/: launch.json
.github/workflows/: ci.yml  desktop-build.yml  publish.yml
automind/: __init__.py  agent.py  main.py  server.py  server_pool.py  server_store.py  server_web.py
automind/cli/: app.py  tui.py
automind/context/: code_analyzer.py  context_manager.py  env_detector.py  input_parser.py  project_indexer.py
automind/core/: config.py  db.py  edition.py  events.py  exceptions.py  experts.py  hooks.py  json_utils.py  llm.py  logging.py  paths.py  plugin.py  prompts.py  quota.py  ratelimit.py  redact.py  types.py  updater.py
automind/memory/: __init__.py  entity_memory.py  knowledge_graph.py  long_term.py  manager.py  project_memory.py  short_term.py
automind/multiagent/: __init__.py  orchestrator.py
automind/planning/: dependency_graph.py  hierarchical_planner.py  nonmonotonic.py  plan_executor.py  react_executor.py  reasoning.py
automind/rag/: __init__.py  kb.py  parser.py
automind/reflection/: consistency_checker.py  quality_assessor.py  reflexion.py  retry_handler.py  self_correction.py
automind/skills/: markdown_skill.py  skill_base.py  skill_registry.py
automind/skills/builtin/: code_generator.py  dep_audit.py  doc_generator.py  log_analyzer.py  project_init.py  test_runner.py
automind/state/: checkpoint.py  human_loop.py  resource_manager.py
automind/static/: index.html  manual.html
automind/static/css/: base.css  components.css  input-modal.css  layout.css  panels.css
automind/static/js/: chat.js  core.js  editor.js  experts.js  misc.js  panels.js  settings.js  team.js  templates.js  theme.js  workspace.js  ws.js
automind/symbolic/: datalog_engine.py  fact_extractor.py  graph_ops.py
automind/tools/: base.py  browser.py  file_editor.py  function_calling.py  mcp_registry.py  permissions.py  sandbox.py  terminal.py
demo/: e2e_demo.py
desktop/: README.md  SIGNING.md  automind.spec  build_release.ps1  icon.icns  installer.iss  main.py  make_icon.py  sign.ps1
desktop/packaging/linux/: build_deb.sh
desktop/packaging/macos/: build_dmg.sh  merge_universal.sh
docs/: EDITIONS.md
examples/01-quick-start/: README.md
examples/02-custom-model/: README.md  config.yaml
examples/03-skill-development/: README.md  word_count_skill.py
examples/04-plugin-development/: README.md  hooks.py  plugin.json
scripts/: build_community.py
tests/: conftest.py  test_paths.py  test_sqlite_store.py  test_updater.py  test_v1_features.py
tests/bugs/: test_bug_fixes.py
tests/core/: test_autonomy.py  test_edition.py  test_json_utils.py  test_llm_retry.py  test_observability.py  test_plugins.py  test_ratelimit.py  test_redact.py  test_repair_json.py  test_types.py  test_v04_fixes.py
tests/planning/: test_dependency_graph.py
tests/server/: test_commercial.py  test_frontend_security.py  test_openai_compat.py  test_security_features.py  test_session_pool.py  test_split_modules.py  test_static_assets.py  test_v08_locked.py  test_v09_features.py  test_workspace_and_rollback.py
tests/skills/: test_builtin_skills.py  test_code_generator.py  test_markdown_skill.py
tests/tools/: test_edit_accuracy.py  test_permissions.py  test_security_hardening.py
web/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
web/src/: App.tsx  global.css  ws.ts
web/src/api/: client.ts
web/src/components/: Header.tsx  Sidebar.tsx
web/src/components/chat/: Bubbles.tsx  ChatPanel.tsx
web/src/components/modals/: ApprovalModal.tsx  PreviewModal.tsx  SettingsModals.tsx  TemplatesModal.tsx  TourModal.tsx  UpdateModal.tsx  WorkspacesModal.tsx
web/src/components/right/: CodeTab.tsx  RightPanel.tsx
web/src/components/views/: AuditView.tsx  ExpertsView.tsx  HistoryView.tsx  KbView.tsx  PlanView.tsx  RouterView.tsx  ScheduleView.tsx  StatsView.tsx  TeamView.tsx  ToolsView.tsx
web/src/lib/: markdown.ts  pricing.ts  templates.ts
web/src/store/: app.ts  chat.ts  panel.ts  ui.ts
