[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "automind-agent"
# 与 automind/__init__.py 的 __version__ 保持一致（§14.1 单一数据源）
version = "1.2.0"
description = "通用自动化 Agent 框架（社区版）- 支持分层规划、符号推理、自我纠错、MCP 和多模型后端"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{name = "AutoMind Team"}]
keywords = ["agent", "automation", "llm", "mcp", "planning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "pydantic-settings>=2.0",
    "rich>=13.0",  # §14.3：CLI Rich REPL（提升为核心依赖）
]

[project.urls]
Homepage = "https://github.com/automind/automind"
Repository = "https://github.com/automind/automind"
Issues = "https://github.com/automind/automind/issues"

[project.optional-dependencies]
web = [
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "openai>=1.30.0",
    "httpx>=0.27.0",
]
full = [
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "httpx>=0.27.0",
    "tiktoken>=0.7.0",
    "rich>=13.0",
    "openai>=1.30.0",
    "anthropic>=0.30.0",
    "google-generativeai>=0.7.0",
]
dev = [
    "automind-agent[web]",   # 测试需 Web 栈（fastapi/uvicorn/httpx/openai）
    "pypdf>=4.0",            # RAG 知识库 PDF 解析测试
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
]
# 桌面版打包（Windows/macOS/Linux 通用；平台窗口/托盘后端见下）
#   pywebview 后端：Windows=WebView2 内置，macOS=pyobjc（随 pywebview 装），
#   Linux=WebKit2GTK（需系统包 gir1.2-webkit2-4.1 + PyGObject，CI 里 apt 安装）。
desktop = [
    "automind-agent[web]",
    "pyinstaller>=6.3",
    "pywebview>=5.0",
    "pystray>=0.19",
    "pillow>=10.0",
]

[project.scripts]
automind = "automind.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
asyncio_mode = "auto"

[tool.setuptools.packages.find]
where = ["."]
# 显式排除商业包（automind_pro 位于 pro/ 目录，另行打包分发）
include = ["automind", "automind.*"]

# Web 工作台静态资源必须随包分发，否则 pip 安装后界面退化为兜底页
# v1.0：dist/ 为 React 前端构建产物（web/ 目录 pnpm build 生成），优先伺服
[tool.setuptools.package-data]
automind = [
    "static/*.html",
    "static/css/*.css",
    "static/js/*.js",
    "static/dist/*.html",
    "static/dist/assets/*",
]

[tool.ruff]
target-version = "py311"
line-length = 100
exclude = [
    ".git",
    "__pycache__",
    ".mypy_cache",
    ".ruff_cache",
    "build",
    "dist",
    ".venv",
    "venv",
]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "W",     # pycodestyle warnings
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "ARG",   # flake8-unused-arguments
    "PTH",   # flake8-use-pathlib
]
ignore = [
    "ARG002",  # unused method arguments (common in overrides)
    "PTH123",  # open() vs Path.open() — both acceptable
    # ── 存量风格豁免（开源基线；不改变行为，后续版本渐进收紧）──
    "E501",    # 少量超长行（中文注释/长 URL）
    "E402",    # agent.py 等处的有意延迟导入布局
    "SIM105",  # 有意的 try/except-pass（回调/推送兜底）
    "SIM102", "SIM108", "SIM110", "SIM212",  # if 结构风格
    "ARG001", "ARG004",  # 回调/协议签名中未使用的参数
    "UP042",   # str-枚举基类改造涉及序列化行为，暂不动
    "B905",    # zip(strict=) — 既有调用点行为已验证
    "B007",    # 未使用的循环变量（计数循环）
    "F841",    # 局部变量赋值未用（调试/文档性赋值）
    "N806", "N814", "N818",  # 既有命名（含公开异常名，改名破坏 API）
]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = false
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = ["build/", "dist/", ".venv/", "venv/"]
